kubernetes/prod/apps/system/volsync/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: volsync
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: volsync
  ingress:
    # Allow ingress from prometheus on monitoring namespace
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: "8443"
              protocol: "TCP"
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: volsync-mover
spec:
  description: "Allow VolSync Mover pods to access Minio and network outside cluster"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/created-by: volsync
  egress:
    # Allow egress to minio server on truenas
    - toCIDRSet:
        - cidr: 172.16.11.3/32
      toPorts:
        - ports:
            - port: "9000"
              protocol: TCP
            - port: "9001"
              protocol: TCP

    # Allow egress to internet
    - toEntities:
        - world

    # FIXME: Remove when clusterNetworkPolicy is in place
    # Allow to access kube-dns on kube-system namespace
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: "TCP"
            - port: "53"
              protocol: "UDP"
